@@ -219,15 +219,11 @@ makeDirectory() {
 ########################################################################
 queryParams() {
 
-   $CLEAR
    ProcessSGERoot
 
-   $CLEAR
    GetCell
 
    SetAdminUser
-
-   $CLEAR
 
    queryJavaHome "1.4.2"
 
@@ -235,12 +231,11 @@ queryParams() {
 
    SPOOL_DIR=/var/spool/arco
 
-   $INFOTEXT -u "Spool directory"
+   $INFOTEXT -u "\nSpool directory"
 
    $INFOTEXT "\nIn the spool directory the @@GRID_ENGINE_NAME@@ reporting module will"
    $INFOTEXT "store all queries and results\n"
-
-   
+ 
    dummy=$SPOOL_DIR
    $INFOTEXT -n "Enter the path to the spool directory [$dummy] >> "
    SPOOL_DIR=`Enter $dummy`
@@ -274,7 +269,7 @@ queryParams() {
      fi
 
      $CLEAR
-     $INFOTEXT -u "Database connection test"
+     $INFOTEXT -u "\nDatabase connection test"
 
      CP=$ORGPWD/WEB-INF/lib/arco_common.jar
 
@@ -349,7 +344,7 @@ removeOld() {
 
   if [ "$app" != "" ]; then
 
-    $INFOTEXT -u "@@GRID_ENGINE_NAME@@ reporting module already registered at Sun Java Web Console"
+    $INFOTEXT -u "\n@@GRID_ENGINE_NAME@@ reporting module already registered at Sun Java Web Console"
     $INFOTEXT    "\nThe @@GRID_ENGINE_NAME@@ reporting modules can only be installed"
     $INFOTEXT    "if no previous version is registered."
     for i in $app; do
@@ -399,7 +394,7 @@ copyExampleQuery() {
 
 createSpoolDir() {
 
-   $INFOTEXT -u "Install predefined queries"
+   $INFOTEXT -u "\nInstall predefined queries"
    $INFOTEXT    "\n"
    if [ ! -d "$SPOOL_DIR" ]; then
       $INFOTEXT -ask y n -def y -n \
@@ -436,6 +431,7 @@ createSpoolDir() {
    elif [ $DB_DRIVER = "com.mysql.jdbc.Driver" ]; then
       PREDEFINED_DIR=$ORGPWD/database/example_queries/mysql
    fi
+
    query_ask="y"
    dummy="n"
    result=""
@@ -468,7 +464,6 @@ createSpoolDir() {
 
    chown $ARCO_USER:$ARCO_GROUP $QUERY_DIR/*.xml 
    
-
    RESULT_DIR=$SPOOL_DIR/results
    if [ ! -d "$RESULT_DIR" ]; then
       makeDirectory $RESULT_DIR
@@ -477,7 +472,7 @@ createSpoolDir() {
          exit 1
       fi
    fi
-
+   $INFOTEXT -wait -n "\nHit <RETURN> to continue >> "
 }
 
 encryptPW() {
@@ -742,7 +737,7 @@ createSpoolDir
 #  Setup the all files for reporting at $SGE_ROOT/$SGE_CELL/arco/reporting
 # ------------------------------------------------------------------------------
 $CLEAR
-$INFOTEXT -u "ARCo reporting module setup"
+$INFOTEXT -u "\nARCo reporting module setup"
 
 
 TMP_INST_DIR=$SGE_ROOT/$SGE_CELL/arco
@@ -788,7 +783,7 @@ case $SWC_VERSION in
 esac
 
 $CLEAR
-$INFOTEXT -u "Registering the @@GRID_ENGINE_NAME@@ reporting module in the Sun Java Web Console"
+$INFOTEXT -u "\nRegistering the @@GRID_ENGINE_NAME@@ reporting module in the Sun Java Web Console"
 case $SWC_VERSION in 
    3.0) 
       deployIn30;;
